# Bello

./: README.md  architecture.md  tasks.md
window-quote-agent/: .env.example  .gitignore  README.md  pyproject.toml
window-quote-agent/apps/api/: config.py  main.py
window-quote-agent/apps/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
window-quote-agent/apps/web/src/: App.css  App.tsx  index.css  types.ts
window-quote-agent/apps/web/src/components/: ChatInput.tsx  MessageList.tsx
window-quote-agent/docs/: intent_router_and_chat_history.md
window-quote-agent/docs/examples/: README.md
window-quote-agent/scripts/: diagnose_tests.py  print_config.py  print_graph.py  run_demo.py  test_intent_classification.py
window-quote-agent/tests/: test_chat.py  test_collect_requirements.py  test_generate_quote.py  test_gpt.py  test_graph.py  test_intent_check.py  test_intent_classifier.py  test_intent_pipeline.py  test_price_quote.py  test_qwen.py  test_recommend.py  test_router.py
